fix color contrast orange on white

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     --color-green: #2f5446;
     --color-sky: #a3e2dc;
     --color-white: #fff;
-    --color-orange: #e7783a;
+    --color-orange: #b45c1a;
     --color-red: #7f3417;
     --color-brown: #281811;
   }
